--- a/views/index.jade
+++ b/views/index.jade
@@ -4,8 +4,10 @@ html(lang="en")
     meta(charset="utf-8")
     meta(name="viewport", content="width=device-width")
     script(data-main="scripts/main", src="scripts/require.js")
+    link(rel="stylesheet", href="/style/screen.css", type="text/css")
     title Change the Pace
   body
-    p
-      input(type="text", name="room")
-      button(id="join") Join Room
+    div
+      meter(min="-1", max="1", optimum="0")
+      button(id="slower", data-vote="-1") Slower
+      button(id="faster", data-vote="1") Faster
