--- a/views/index.jade
+++ b/views/index.jade
@@ -3,7 +3,10 @@ html(lang="en")
   head
     meta(charset="utf-8")
     meta(name="viewport", content="width=device-width")
-    script(data-main="scripts/main", src="scripts/require.js")
+    - if(environment == "production")
+      script(src="scripts/optimized.js")
+    - else
+      script(data-main="scripts/main", src="scripts/require.js")
     link(rel="stylesheet", href="/style/screen.css", type="text/css")
     title Change the Pace
   body
