--- a/views/index.jade
+++ b/views/index.jade
@@ -8,9 +8,11 @@ html(lang="en")
     - else
       script(data-main="scripts/main", src="scripts/require.js")
     link(rel="stylesheet", href="/style/screen.css", type="text/css")
+    link(rel="stylesheet", href='/style/main.css', type="text/css")
     title Change the Pace
   body
+    div#gauge
+
     div
-      meter(min="-1", max="1", optimum="0")
-      button(id="slower", data-vote="-1") Slower
-      button(id="faster", data-vote="1") Faster
+      a(href="#", id="slower", data-vote="-1") Slower
+      a(href="#", id="faster", data-vote="1") Faster
