--- a/views/index.jade
+++ b/views/index.jade
@@ -7,12 +7,11 @@ html(lang="en")
       script(src="scripts/optimized.js")
     - else
       script(data-main="scripts/main", src="scripts/require.js")
-    link(rel="stylesheet", href="/style/screen.css", type="text/css")
     link(rel="stylesheet", href='/style/main.css', type="text/css")
     title Change the Pace
   body
     div#gauge
 
     div
-      a(href="#", id="slower", data-vote="-1") Slower
-      a(href="#", id="faster", data-vote="1") Faster
+      a(href="#", class="slower", data-vote="-1") Slower
+      a(href="#", class="faster", data-vote="1") Faster
