--- a/views/index.jade
+++ b/views/index.jade
@@ -12,6 +12,6 @@ html(lang="en")
   body
     div#gauge
 
-    div
+    div#gauge-actions
       a(href="#", class="slower", data-vote="-1") Slower
       a(href="#", class="faster", data-vote="1") Faster
