--- a/views/style/main.styl
+++ b/views/style/main.styl
@@ -6,3 +6,34 @@
 
 #gauge
   width 75%
+  height 75%
+  margin 0 auto
+
+#gauge-actions
+  width 30%
+  margin 0 auto
+  text-align center
+
+a.slower,
+a.faster
+  display inline-block
+  padding 0.6em
+  margin 0.6em
+
+a.slower:before, a.slower:after
+  content " "
+  width 0
+  height 0
+  top 2.08em
+  border 2em solid transparent
+  border-right-color black
+  border-right-width black 2.16em
+
+a.faster:before, a.faster:after
+  content " "
+  width 0
+  height 0
+  top 2.08em
+  border 2em solid transparent
+  border-left-color black
+  border-left-width black 2.16em
