--- a/views/index.jade
+++ b/views/index.jade
@@ -13,5 +13,7 @@ html(lang="en")
     div#gauge
 
     div#gauge-actions
-      a(href="#", class="slower", data-vote="-1") Slower
-      a(href="#", class="faster", data-vote="1") Faster
+      a(href="#", class="slower", data-vote="-1") 
+        span Slower
+      a(href="#", class="faster", data-vote="1") 
+        span Faster
