--- a/views/style/main.styl
+++ b/views/style/main.styl
@@ -96,6 +96,7 @@ a.faster:active
   /* Retina-specific stuff here */
   html
     background transparent url('/images/cubes_@2X.png') scroll repeat 0 0;
+    background-size: 67px 100px;
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px)
   body
