--- a/views/style/main.styl
+++ b/views/style/main.styl
@@ -12,7 +12,6 @@ body
   width 500px
   margin 0 auto
   margin-top 30px
-  padding-bottom 40px
   z-index: -2;
   box-shadow(0px 2px 7px -2px #888888);
 
@@ -27,6 +26,11 @@ a
 #gauge-actions
   margin-top -20px
   position relative
+
+#powered
+  position relative
+  top 70px
+  text-align center
 
 a.slower,
 a.faster
