--- a/views/style/main.styl
+++ b/views/style/main.styl
@@ -24,7 +24,9 @@ a
   margin 0 auto
 
 #gauge-actions
-  margin-top -20px
+  margin-top -50px
+  line-height 60px
+  text-align center
   position relative
 
 #powered
