--- a/views/style/main.styl
+++ b/views/style/main.styl
@@ -7,11 +7,12 @@
 html 
   background transparent url('/images/cubes.png') scroll repeat 0 0;
 
-body
+.controls
   background-color #FFF
   width 500px
   margin 0 auto
   margin-top 30px
+  padding-bottom 30px
   z-index: -2;
   box-shadow(0px 2px 7px -2px #888888);
 
@@ -30,9 +31,8 @@ a
   position relative
 
 #powered
-  position relative
-  top 70px
   text-align center
+  margin-top 30px
 
 a.slower,
 a.faster
